# mlx-rs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  OPTIMIZATION_DETAILS.md  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
doc/: search-index.js
docs/: MODEL_USER_GUIDE.md  crates.js  help.html  (+5 more)
examples/gemma3/: Cargo.toml  download.sh
examples/gemma3/src/: main.rs
examples/llm/: Cargo.toml
examples/llm/src/: cache_utils.rs  main.rs  rope_utils.rs  utils.rs
examples/llm/src/models/: mod.rs  qwen3.rs
examples/mistral/: .gitignore  Cargo.toml  README.md
examples/mistral/src/: config.rs  main.rs  model.rs  model_args.rs
mistral-mlx/: Cargo.toml
mistral-mlx/examples/: benchmark_mistral.rs  generate_mistral.rs
mistral-mlx/src/: lib.rs  model.rs
mlx-internal-macros/: Cargo.toml  README.md
mlx-internal-macros/src/: derive_buildable.rs  derive_builder.rs  generate_builder.rs  generate_macro.rs  lib.rs  shared.rs
mlx-internal-macros/tests/: test_derive_buildable.rs  test_generate_builder.rs  test_macros.rs
mlx-lm/: Cargo.toml
mlx-lm-utils/: .gitignore  Cargo.toml
mlx-lm-utils/src/: error.rs  lib.rs  tokenizer.rs
mlx-lm-utils/tests/fixtures/qwen3/: tokenizer_config.json
mlx-lm/src/: cache.rs  cache_utils.rs  error.rs  lib.rs  model_input.rs  sampler.rs  utils.rs
mlx-lm/src/generate/: generate_token.rs  mod.rs
mlx-lm/src/models/: llama.rs  mod.rs  qwen3.rs
mlx-lm/src/models/gemma/: gemma3.rs  mod.rs
mlx-lm/src/utils/: mod.rs  rope.rs
mlx-macros/: Cargo.toml  README.md
mlx-macros/src/: generate_builder.rs  lib.rs  module_parameters.rs  option_builder.rs  quantizable.rs  util.rs
mlx-macros/src/builder/: analyzer.rs  analyzer_struct.rs  base.rs  mod.rs
mlx-macros/src/shared/: field.rs
mlx-macros/tests/: test_generate_builder.rs
mlx-nn/: Cargo.toml
mlx-nn/src/: activation.rs  container.rs  convolution.rs  convolution_transpose.rs  dropout.rs  embedding.rs  error.rs  lib.rs  linear.rs  losses.rs  macros.rs  module.rs  nested.rs  normalization.rs  pooling.rs  positional_encoding.rs  quantized.rs  recurrent.rs  sequential.rs  transformer.rs  upsample.rs  utils.rs  value_and_grad.rs
mlx-nn/src/optimizer/: mod.rs  rmsprop.rs  sgd.rs
mlx-nn/src/optimizers/: adadelta.rs  adagrad.rs  mod.rs  rmsprop.rs  sgd.rs
mlx-nn/tests/: test_module.rs  test_module_parameters.rs
mlx-rs/: CHANGELOG.md  Cargo.toml  README.md
mlx-rs-lm/: Cargo.toml  PERFORMANCE_ANALYSIS_FINAL.md  python_single_seqlen.py  run_perf_comparison.sh
mlx-rs-lm/.claude/skills/02-tts/: SKILL.md
mlx-rs-lm/docs/: ARCHITECTURE.md  rope-fix-investigation.md  tts-performance-benchmark.md
mlx-rs-lm/examples/: glm4.rs  glm4_moe.rs  qwen3.rs  single_seqlen.rs  test_g2pw.rs  test_paraformer_pure_rust.rs  test_paraformer_wav.rs  voice_clone.rs
mlx-rs-lm/src/: audio.rs  cache.rs  compiled_ops.rs  error.rs  inference.rs  lib.rs  metal_kernels.rs  voice_clone.rs
mlx-rs-lm/src/generate/: generate_token.rs
mlx-rs-lm/src/models/: bert.rs  glm4.rs  glm4_moe.rs  hubert.rs  mod.rs  paraformer.rs  qwen3.rs  t2s.rs  vits.rs
mlx-rs-lm/src/text/: bert_features.rs  cmudict.rs  g2pw.rs  mod.rs  preprocessor.rs  symbols.rs
mlx-rs-lm/src/utils/: mod.rs
mlx-rs/examples/: linear_regression.rs  tutorial.rs
mlx-rs/src/: array.rs  builder.rs  compile.rs  device.rs  dtype.rs  error.rs  fast.rs  fft.rs  function.rs  lib.rs  linalg.rs  losses.rs  nested.rs  quantizable.rs  quantization.rs  random.rs  stream.rs  types.rs  utils.rs
mlx-rs/src/array/: element.rs  mod.rs  operators.rs  safetensors.rs
mlx-rs/src/fft/: fftn.rs  mod.rs  rfftn.rs  shift.rs  utils.rs
mlx-rs/src/macros/: array.rs  assert.rs  internal.rs  mod.rs
mlx-rs/src/module/: cache.rs  mod.rs  module.rs  param.rs
mlx-rs/src/nn/: activation.rs  container.rs  convolution.rs  convolution_transpose.rs  dropout.rs  embedding.rs  error.rs  linear.rs  losses.rs  macros.rs  mod.rs  module_value_and_grad.rs  normalization.rs  pooling.rs  positional_encoding.rs  quantized.rs  recurrent.rs  transformer.rs  upsample.rs  value_and_grad.rs
mlx-rs/src/ops/: arithmetic.rs  conversion.rs  convolution.rs  cumulative.rs  factory.rs  io.rs  logical.rs  mod.rs  other.rs  quantization.rs  reduction.rs  shapes.rs  sort.rs
mlx-rs/src/ops/indexing/: index_impl.rs  indexmut_impl.rs  mod.rs
mlx-rs/src/optimizers/: adadelta.rs  adafactor.rs  adagrad.rs  adam.rs  adamax.rs  adamw.rs  lion.rs  mod.rs  rmsprop.rs  sgd.rs
mlx-rs/src/transforms/: compile.rs  grad.rs  keyed_value_and_grad.rs  mod.rs  module_value_and_grad.rs  value_and_grad.rs
mlx-rs/src/transforms/compile/: compile.rs  compile_updatable.rs  compile_with_state.rs  mod.rs  module.rs  trainable_state.rs
mlx-rs/src/utils/: guard.rs  io.rs  mod.rs  module.rs
mlx-rs/tests/: optimizer_tests.rs  test_module.rs  test_module_parameters.rs
mlx-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  wrapper.h
mlx-sys/examples/: create_array.rs  hello.rs  is_metal_available.rs
mlx-sys/shim/mlx-cxx/: array.hpp  compat.hpp  compile.hpp  device.hpp  dtype.hpp  fast.hpp  fft.hpp  functions.hpp  linalg.hpp  mlx_cxx.hpp  ops.hpp  random.hpp  transforms.hpp  types.hpp  utils.hpp
mlx-sys/shim/mlx-cxx/backend/metal/: metal.hpp
mlx-sys/src/: array.cpp  array.rs  compat.cpp  compat.rs  compile.cpp  compile.rs  device.rs  dtype.cpp  dtype.rs  ext.h  extras.h  fast.cpp  fast.rs  fft.cpp  fft.rs  function.rs  io.rs  lib.rs  linalg.cpp  linalg.rs  macros.rs  main.rs  mlx.cpp  mlx_cxx.cpp  ops.cpp  ops.rs  primitives.rs  random.cpp  random.rs  stream.rs  transforms.cpp  transforms.rs  types.cpp  types.rs  utils.cpp  utils.rs
mlx-sys/src/backend/: metal.cpp  metal.rs  mod.rs
mlx-sys/src/shim/: closure.cpp  closure.h  result.cpp  result.h  shim.h
mlx-sys/src/transforms/: compat.rs  mod.rs  transforms.cpp
mlx-sys/src/types/: bfloat16.rs  complex64.rs  float16.rs  mod.rs
mlx-sys/tests/: array.rs  device.rs  dtype.rs  fft.rs  linalg.rs  ops.rs  utils.rs
mlx-sys/wrapper/mlx-cxx/: array.cpp  array.hpp
(+4435 files in other folders)
