[workspace.package]
version = "0.14.0"
authors = [
    "Minghua Wu <michael.wu1107@gmail.com>",
    "David Chavez <david@dcvz.io>",
]

[workspace]
members = [
    "mlx-macros", 
    "mlx-sys", 
    "mlx-rs", 
    "mlx-internal-macros",
    "mlx-tests",
    "examples/*", 
]

resolver = "2"

[workspace.dependencies]
# workspace local dependencies
mlx-sys = { version = "0.1.0", path = "mlx-sys" }
mlx-macros = { version = "0.1.0", path = "mlx-macros" }
mlx-internal-macros = { version = "0.1.0", path = "mlx-internal-macros" }
mlx-rs = { version = "0.14.0", path = "mlx-rs" }
mlx-nn = { version = "0.14.0", path = "mlx-nn" }

# external dependencies
thiserror = "1"
float_eq = "1"
pretty_assertions = "1.4.0"
dyn-clone = "1"
half = "2"
mach-sys = "0.5"
num-complex = "0.4"
num_enum = "0.7"
num-traits = "0.2"
paste = "1"
smallvec = "1"
strum = { version = "0.26", features = ["derive"] }
libc = "0.2"
parking_lot = "0.12"
tempfile = "3"
itertools = "0.14"
syn = { version = "2", features = ["full"] }
quote = "1"
darling = "0.20"
proc-macro2 = "1"
bindgen = "0.70"
cmake = "0.1"
cc = "1"
safetensors = "0.5"
bytemuck = "1"