[workspace.package]
# All but mlx-sys should follow the same version. mlx-sys should follow
# the version of mlx-c.
version = "0.25.2"
edition = "2021"
authors = [
    "Minghua Wu <michael.wu1107@gmail.com>",
    "David Chavez <david@dcvz.io>",
]

repository = "https://github.com/oxideai/mlx-rs"
keywords = ["mlx", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
documentation = "https://oxideai.github.io/mlx-rs/mlx_rs/"
rust-version = "1.82.0"

[workspace]
members = [
    "mlx-macros",
    "mlx-sys",
    "mlx-rs",
    "mlx-internal-macros",
    "mlx-lm",
    "mlx-lm-utils", 
    "mlx-tests",
    "examples/*", 
]

resolver = "2"

[workspace.dependencies]
# workspace local dependencies
mlx-sys = { version = "=0.2.0", path = "mlx-sys" }
mlx-macros = { version = "0.25", path = "mlx-macros" }
mlx-internal-macros = { version = "0.25", path = "mlx-internal-macros" }
mlx-rs = { version = "0.25", path = "mlx-rs" }
mlx-lm = { version = "0.0.1", path = "mlx-lm" }
mlx-lm-utils = { version = "0.0.1", path = "mlx-lm-utils" }

# external dependencies
thiserror = "2"
float_eq = "1"
pretty_assertions = "1.4.0"
dyn-clone = "1"
half = "2"
mach-sys = "0.5"
num-complex = "0.4"
num_enum = "0.7"
num-traits = "0.2"
paste = "1"
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
libc = "0.2"
parking_lot = "0.12"
tempfile = "3"
itertools = "0.14"
syn = { version = "2", features = ["full"] }
quote = "1"
darling = "0.23"
proc-macro2 = "1"
bindgen = "0.72"
cmake = "0.1"
cc = "1"
safetensors = "0.6"
bytemuck = "1"
memmap2 = "0.9"
