[package]
name = "mlx-lm-utils"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
documentation.workspace = true
description = "Generic utility functions for mlx-lm"

[dependencies]
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokenizers = "0.22"
