[package]
name = "mlx-lm"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
documentation.workspace = true

[dependencies]
# Local dependencies
mlx-rs.workspace = true

# External dependencies
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokenizers = { version = "=0.21.0", features = ["http"] } # 0.21.1 uses features that went stable in 1.82 while our MSRV is 1.81
hf-hub = "=0.4.1" # 0.4.2 uses features that went stable in 1.82 while our MSRV is 1.81
clap = { version = "4", features = ["derive"] }
idna_adapter = "=1.2.0" # Fix idna-adapter version so that it works with rustc 1.81
thiserror = "2"
serde_json = "1"
minijinja = "2"