[package]
name = "mlx-lm"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
documentation.workspace = true

[dependencies]
# Local dependencies
mlx-rs.workspace = true

# External dependencies
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokenizers = { version = "0.22.0", features = ["http"] } 
hf-hub = "=0.4.3" 
clap = { version = "4", features = ["derive"] }
idna_adapter = "1.2" 
thiserror = "2"
serde_json = "1"
minijinja = "2"