[package]
name = "mlx-nn"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
mlx-internal-macros.workspace = true
mlx-macros.workspace = true
mlx-rs.workspace = true
thiserror.workspace = true

[dev-dependencies]
float_eq.workspace = true
pretty_assertions.workspace = true