[package]
name = "mlx-rs-lm"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
documentation.workspace = true

[dependencies]
# Local dependencies
mlx-rs.workspace = true
mlx-lm-utils.workspace = true
mlx-sys.workspace = true

# External dependencies
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokenizers = { version = "0.22.0", features = ["http"] }
clap = { version = "4", features = ["derive"] }
idna_adapter = "1.2"
thiserror = "2"
serde_json = "1"
minijinja = "2"
hf-hub = "0.4.3"
hound = "3.5"  # WAV file I/O
pinyin = "0.10"  # Chinese character to pinyin conversion

[features]
default = []
# Debug features for development - enable verbose logging for specific components
debug-attn = []    # Debug attention computations
debug-moe = []     # Debug MoE routing and expert selection
debug-logits = []  # Debug logit values during generation
debug-gqa = []     # Debug grouped query attention

# =================== Examples ===================
# Only tracked examples are listed here. Development/debug examples
# can be run with: cargo run --example <name> (if the file exists)

[[example]]
name = "qwen3"
path = "examples/qwen3.rs"

[[example]]
name = "glm4"
path = "examples/glm4.rs"

[[example]]
name = "glm4_moe"
path = "examples/glm4_moe.rs"

[[example]]
name = "single_seqlen"
path = "examples/single_seqlen.rs"
