[package]
name = "mlx-rs"
version.workspace = true
authors.workspace = true
edition = "2021"

description = "Unofficial rust wrapper for Apple's mlx machine learning library."
repository = "https://github.com/oxideai/mlx-rs"
keywords = ["mlx", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
targets = [
  "aarch64-apple-darwin",
  "aarch64-apple-ios",
  "aarch64-apple-ios-sim",
]

[dependencies]
mlx-sys.workspace = true
mlx-internal-macros.workspace = true
mlx-macros.workspace = true
dyn-clone.workspace = true
half.workspace = true
mach-sys.workspace = true
num-complex.workspace = true
num_enum.workspace = true
num-traits.workspace = true
paste.workspace = true
smallvec.workspace = true
strum.workspace = true
thiserror.workspace = true
libc.workspace = true
parking_lot.workspace = true
itertools.workspace = true

# optional dependencies
safetensors = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true, features = ["extern_crate_std"] }

[dev-dependencies]
pretty_assertions.workspace = true
float_eq.workspace = true
tempfile.workspace = true

[features]
default = ["accelerate", "metal", "io", "safetensors"]

accelerate = ["mlx-sys/accelerate"]
metal = ["mlx-sys/metal"]
io = []
safetensors = ["dep:safetensors", "dep:bytemuck"]