[package]
name = "mlx-sys"
version = "0.0.10"
authors = ["Minghua Wu <michael.wu1107@gmail.com>", "David Chavez <david@dcvz.io>"]
edition = "2021"

description = "Low-level interface and binding generation for the mlx library"
repository = "https://github.com/oxideai/mlx-rs"
keywords = ["mlx", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
targets = [
  "aarch64-apple-darwin",
  "aarch64-apple-ios",
  "aarch64-apple-ios-sim",
]

[features]
default = ["accelerate", "metal"]

accelerate = []
metal = []

[dependencies]

[build-dependencies]
bindgen = "0.70.1"
cmake = "0.1.31"
cc = "1"
defer = "0.2.1"