[package]
name = "mlx-sys-burn"
version = "0.2.1" # mlx-sys version should follow that of mlx-c
authors.workspace = true
edition.workspace = true

description = "Low-level interface and binding generation for the mlx library (fork with additional operations for burn-mlx)"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
targets = [
  "aarch64-apple-darwin",
  "aarch64-apple-ios",
  "aarch64-apple-ios-sim",
]

[features]
default = ["accelerate", "metal"]

accelerate = []
metal = []

[dependencies]

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
cc.workspace = true
