[package]
name = "gemma3"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
mlx-rs.workspace = true
mlx-lm.workspace = true
mlx-lm-utils.workspace = true

anyhow = "1"