[package]
name = "llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
documentation.workspace = true

[dependencies]
# Local dependencies
mlx-rs.workspace = true

# External dependencies
serde = { version = "1", features = ["derive"] }
anyhow = "1"