[package]
name = "mistral"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
# Local dependencies
mlx-rs.workspace = true

# External dependencies
tokenizers = "=0.22.0" # 0.21.1 uses features that went stable in 1.82 while our MSRV is 1.81
thiserror = "2"
anyhow = "1.0"
hf-hub = "=0.4.3" # 0.4.2 uses features that went stable in 1.82 while our MSRV is 1.81
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
safetensors.workspace = true

# Fix idna-adapter version so that it works with rustc 1.81
idna_adapter = "=1.2.1"
