[package]
name = "mistral"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
# Local dependencies
mlx-rs.workspace = true

# External dependencies
tokenizers = "0.22.0"
thiserror = "2"
anyhow = "1.0"
hf-hub = "0.4.3"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
safetensors.workspace = true
idna_adapter = "1.2"
